fix: allow SQL NULL cells in query results
List.copyOf rejects null elements, so any table with a NULL column crashed preview with an NPE that surfaced as QUERY_FAILED.