@@ -1,5 +1,7 @@
 package com.ivan.nexus.domain.database;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public record QueryResult(
@@ -11,6 +13,13 @@ public record QueryResult(
 ) {
     public QueryResult {
         columns = columns == null ? List.of() : List.copyOf(columns);
-        rows = rows == null ? List.of() : rows.stream().map(List::copyOf).toList();
+        rows = rows == null ? List.of() : rows.stream().map(QueryResult::copyRow).toList();
+    }
+
+    private static List<Object> copyRow(List<Object> row) {
+        if (row == null) {
+            return List.of();
+        }
+        return Collections.unmodifiableList(new ArrayList<>(row));
     }
 }
